Add reticulate to docker image

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -48,7 +48,8 @@ RUN Rscript -e  "install.packages( \
       'rgoogleslides', \
       'servr', \
       'spelling', \
-      'styler'))"
+      'styler', \
+      'reticulate'))"
 
 # Copy over git token and package list
 COPY git_token.txt .
