--- a/.github/workflows/transfer-rendered-files.yml
+++ b/.github/workflows/transfer-rendered-files.yml
@@ -36,7 +36,8 @@ jobs:
         run: |
           sudo apt-get install subversion
           sudo apt install r-base
-
+          Rscript -e "install.packages('yaml')"
+          
           if [ -d "docs/" ]
           then
             # remove old docs/ files and folder
