update release notes gha

--- a/.github/workflows/release-notes.yml
+++ b/.github/workflows/release-notes.yml
@@ -6,15 +6,26 @@ on:
       - repo-sync/DaSL_Course_Template_Leanpub/default
 
 jobs:
-  test:
+  pr-comment:
     runs-on: ubuntu-latest
     steps:
       - uses: mshick/add-pr-comment@v1
         with:
           message: |
-            **Hello**
-            🌏
-            !
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+            **Please carefully review these changes and decide which are useful for your course.**
+            See the release notes: https://github.com/jhudsl/DaSL_Course_Template_Bookdown/wiki/Release-Notes
+
+            - If you don't want the changes from a particular file, you can always [revert that particular commit](https://git-scm.com/docs/git-revert) before merging the sync PR.
+            If you will not want any updates on this file in the future, you may want to remove a file from being synced in your repo [by reconfiguring the sync file](https://github.com/jhudsl/DaSL_Course_Template_Bookdown/blob/main/.github/sync.yml).
+
+            - If you want only some changes, but they are not on a whole file basis, you could check out the branch and make manual edits.
+
+            To checkout the branch, navigate to your own repository you should be able to run:
+            ```
+            git checkout repo-sync/DaSL_Course_Template_Bookdown/default
+            ```
+            - If you don't want any of the changes you can close the PR entirely.
+            You may want to unenroll your repository from the [sync github actions by deleting your repo name from this file](https://github.com/jhudsl/DaSL_Course_Template_Bookdown/blob/main/.github/sync.yml) if this will continue to be the case.
+          repo-token: ${{ secrets.GH_PAT }}
           repo-token-user-login: 'github-actions[bot]' # The user.login for temporary GitHub tokens
           allow-repeats: false # This is the default
