--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -15,6 +15,8 @@ group:
       dest: .github/workflows/style-and-sp-check.yml
     - source: .github/workflows/url-checker.yml
       dest: .github/workflows/url-checker.yml
+    - source: .github/workflows/release-notes.yml
+      dest: .github/workflows/release-notes.yml
     - source: scripts/
       dest: scripts/
     - source: docker/
