Yaml installation probs (#215)
* transfer-rendered-files.yml needs to install yaml package first

* Try to address permissions problem with yaml install

--- a/.github/workflows/transfer-rendered-files.yml
+++ b/.github/workflows/transfer-rendered-files.yml
@@ -36,6 +36,8 @@ jobs:
         run: |
           sudo apt-get install subversion
           sudo apt install r-base
+
+          chmod 755 /usr/local/lib/R/site-library
           Rscript -e "install.packages('yaml')"
           
           if [ -d "docs/" ]
