fix branch-ignore syntax in docker build test (#217)
* Load basic template for implement release note PR comment

* update release notes gha

* use branch-ignore for docker bubild

* delete release notes variable idea

* Fix branch spec

--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -10,9 +10,8 @@ name: Test build of Dockerfile
 # master
 on:
   pull_request:
-    branches: [ main ]
+    branches: [ main , !repo-sync/DaSL_Course_Template_Leanpub/default ]
     paths: [ docker/Dockerfile, docker/github_package_list.tsv ]
-    branches-ignore: [ repo-sync/DaSL_Course_Template_Leanpub/default ]
   workflow_dispatch:
     inputs:
       dockerhubpush:
