--- a/.github/workflows/transfer-rendered-files.yml
+++ b/.github/workflows/transfer-rendered-files.yml
@@ -36,8 +36,7 @@ jobs:
         run: |
           sudo apt-get install subversion
           sudo apt install r-base
-          chmod 755 /usr/local/lib/R/site-library
-          Rscript -e "install.packages('yaml')"
+          sudo Rscript -e "install.packages('yaml')"
 
           if [ -d "docs/" ]
           then
