Try to fix branch syntax

--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -10,7 +10,9 @@ name: Test build of Dockerfile
 # master
 on:
   pull_request:
-    branches: [ main , !repo-sync/DaSL_Course_Template_Leanpub/default ]
+    branches:
+      - main
+      - !repo-sync/DaSL_Course_Template_Leanpub/default
     paths: [ docker/Dockerfile, docker/github_package_list.tsv ]
   workflow_dispatch:
     inputs:
