Another attempt to fix syntax

--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -11,8 +11,8 @@ name: Test build of Dockerfile
 on:
   pull_request:
     branches:
-      - main
-      - !repo-sync/DaSL_Course_Template_Leanpub/default
+      - 'main'
+      - '!repo-sync/DaSL_Course_Template_Leanpub/default'
     paths: [ docker/Dockerfile, docker/github_package_list.tsv ]
   workflow_dispatch:
     inputs:
