--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -33,9 +33,9 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Don't re-test if this is a sync branch
-        if: ${{ github.base_ref == 'repo-sync/DaSL_Course_Template_Leanpub/default' }}
+        if: ${{ github.head_ref == 'repo-sync/DaSL_Course_Template_Bookdown/default' }}
         run: |
-          echo This was tested on DaSL_Course_Template_Leanpub no need to re-run
+          echo This was tested on DaSL_Course_Template_Bookdown no need to re-run
           exit 1
 
       # Set up Docker build
