Attempt two for making the repository line automatic in transfer-rendered-files.yml (#229)
* Try a table?

* Add credits table and re-render

* Add to dictionary.txt

* Incorporating Carriewright review

* Add link to contributing guidelines

* Add credits table

* Remove About.Rmd from spell check.R

* Needed a value = TRUE

* Try the repo string replacement idea

* Try to fix syntax

* Try switching syntax

* Change so it will drop Bookdown if it exists but always append _Leanpub

--- a/.github/workflows/transfer-rendered-files.yml
+++ b/.github/workflows/transfer-rendered-files.yml
@@ -30,6 +30,9 @@ jobs:
 
       - name: Checkout code from Leanpub repo
         uses: actions/checkout@v2
+        # Get repository name by dropping Bookdown if it exists but always append _Leanpub
+        env:
+          LEANPUB_REPO: ${GITHUB_REPOSITORY} | sed "s/_Bookdown/ /g" | awk '{print $1"_Leanpub"}'
         with:
           repository: ${env.LEANPUB_REPO}
           token: ${{ secrets.GH_PAT }}
