--- a/.github/workflows/transfer-rendered-files.yml
+++ b/.github/workflows/transfer-rendered-files.yml
@@ -11,11 +11,11 @@ name: Copy files from Bookdown to Leanpub repo
 on:
   workflow_dispatch:
   # Only run after the render finishes running
-  # workflow_run:
-  #  workflows: [ "Build, Render, and Push" ]
-  #  branches: [ main ]
-  #  types:
-  #    - completed
+  workflow_run:
+    workflows: [ "Build, Render, and Push" ]
+    branches: [ main ]
+    types:
+      - completed
 
 jobs:
   file-bookdown-pr:
@@ -28,7 +28,17 @@ jobs:
         id: get_repo_name
         shell: bash
         run: |
-          LEANPUB_REPO=$(echo DaSL_Course_Template_Bookdown | sed "s/_Bookdown/ /g" | awk '{print $1"_Leanpub"}')
+          LEANPUB_REPO=$(echo jhudsl/DaSL_Course_Template_Bookdown | sed "s/_Bookdown/ /g" | awk '{print $1"_Leanpub"}')
+          echo $LEANPUB_REPO
+
+      # If the repo doesn't exist, stop
+      - name: Stop if repository doesn't exist
+        run: |
+          git ls-remote "$LEANPUB_REPO" > /dev/null 2>&1
+          if [ "$?" -ne 0 ]; then
+            echo "'$LEANPUB_REPO' does not exist in GitHub; skipping transfer"
+            exit 1;
+          fi
 
       - name: Checkout code from Leanpub repo
         uses: actions/checkout@v2
