--- a/.github/workflows/transfer-rendered-files.yml
+++ b/.github/workflows/transfer-rendered-files.yml
@@ -35,7 +35,7 @@ jobs:
         run: |
           LEANPUB_REPO_EXISTS=$(git ls-remote https://github.com/$LEANPUB_REPO > /dev/null 2>&1)
           if [ "$?" -ne 0 ]; then
-            LEANPUB_REPO_EXISTS="false"
+            LEANPUB_REPO_EXISTS=false
             echo "'$LEANPUB_REPO' does not exist in GitHub; skipping transfer"
           fi
 
