--- a/.github/workflows/transfer-rendered-files.yml
+++ b/.github/workflows/transfer-rendered-files.yml
@@ -24,36 +24,26 @@ jobs:
 
     # Get repository name by dropping Bookdown if it exists but always append _Leanpub
     steps:
-      - name: Get repository name
-        id: get_repo_name
-        shell: bash
+      - name: Run git repo check
+        id: git_repo_check
         run: |
-          LEANPUB_REPO=$(echo ${GITHUB_REPOSITORY} | sed "s/_Bookdown/ /g" | awk '{print $1"_Leanpub"}')
-          echo $LEANPUB_REPO
+        LEANPUB_REPO=$(echo ${GITHUB_REPOSITORY} | sed "s/_Bookdown/ /g" | awk '{print $1"_Leanpub"}')
 
-      - name: Set up test for if LEANPUB REPO EXISTS
-        run: |
-          LEANPUB_REPO_EXISTS=$(git ls-remote https://github.com/$LEANPUB_REPO > /dev/null 2>&1)
-          FALSE=false
-          if [ "$?" -ne 0 ]; then
-            LEANPUB_REPO_EXISTS=false
-            echo "'$LEANPUB_REPO' does not exist in GitHub; skipping transfer"
-          fi
+        results=$(Rscript "scripts/git_repo_check.R $LEANPUB_REPO")
+        echo "::set-output name=git_repo_check::$results"
 
       - name: Quit if LEANPUB_REPO doesn't exist
-        if: ${{ steps.spell_check_run.outputs.LEANPUB_REPO_EXISTS == steps.spell_check_run.outputs.FALSE }}
-        run:
-          set +e
-          exit 1
-          set -e
+        if: ${{ steps.git_repo_check.outputs.results == TRUE }}
 
       - name: Checkout code from Leanpub repo
+        if: ${{ steps.git_repo_check.outputs.results == TRUE }}
         uses: actions/checkout@v2
         with:
           repository: ${{ steps.get_repo_name.outputs.LEANPUB_REPO }}
           token: ${{ secrets.GH_PAT }}
 
       - name: Get files from Bookdown repo
+        if: ${{ steps.git_repo_check.outputs.results == TRUE }}
         shell: bash
         env:
           GH_TOKEN: ${{ secrets.GH_PAT }}
@@ -102,6 +92,7 @@ jobs:
           done < "$input"
 
       - name: Create PR with rendered docs files
+        if: ${{ steps.git_repo_check.outputs.results == TRUE }}
         uses: peter-evans/create-pull-request@v3
         id: cpr
         with:
@@ -126,6 +117,7 @@ jobs:
 
       # Write out PR info
       - name: Check outputs
+        if: ${{ steps.git_repo_check.outputs.results == TRUE }}
         run: |
           echo "Pull Request Number - ${{ steps.cpr.outputs.pull-request-number }}"
           echo "Pull Request URL - ${{ steps.cpr.outputs.pull-request-url }}"
