--- a/.github/workflows/transfer-rendered-files.yml
+++ b/.github/workflows/transfer-rendered-files.yml
@@ -33,14 +33,14 @@ jobs:
           echo "::set-output name=git_repo_check::$results"
 
       - name: Checkout code from Leanpub repo
-        if: ${{ steps.git_repo_check.outputs.results == TRUE }}
+        if: ${{ steps.git_repo_check.outputs.results == 'TRUE' }}
         uses: actions/checkout@v2
         with:
           repository: ${{ steps.get_repo_name.outputs.LEANPUB_REPO }}
           token: ${{ secrets.GH_PAT }}
 
       - name: Get files from Bookdown repo
-        if: ${{ steps.git_repo_check.outputs.results == TRUE }}
+        if: ${{ steps.git_repo_check.outputs.results == 'TRUE' }}
         shell: bash
         env:
           GH_TOKEN: ${{ secrets.GH_PAT }}
@@ -89,7 +89,7 @@ jobs:
           done < "$input"
 
       - name: Create PR with rendered docs files
-        if: ${{ steps.git_repo_check.outputs.results == TRUE }}
+        if: ${{ steps.git_repo_check.outputs.results == 'TRUE' }}
         uses: peter-evans/create-pull-request@v3
         id: cpr
         with:
@@ -114,7 +114,7 @@ jobs:
 
       # Write out PR info
       - name: Check outputs
-        if: ${{ steps.git_repo_check.outputs.results == TRUE }}
+        if: ${{ steps.git_repo_check.outputs.results == 'TRUE' }}
         run: |
           echo "Pull Request Number - ${{ steps.cpr.outputs.pull-request-number }}"
           echo "Pull Request URL - ${{ steps.cpr.outputs.pull-request-url }}"
