--- a/.github/workflows/transfer-rendered-files.yml
+++ b/.github/workflows/transfer-rendered-files.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Run git repo check
         id: git_repo_check
         run: |
-          LEANPUB_REPO=$(echo ${GITHUB_REPOSITORY} | sed "s/_Bookdown/ /g" | awk '{print $1"_Leanpub"}')
+          LEANPUB_REPO=$(${GITHUB_REPOSITORY} | sed "s/_Bookdown/ /g" | awk '{print $1"_Leanpub"}')
 
           results=$(Rscript --vanilla scripts/git_repo_check.R $LEANPUB_REPO)
           echo "::set-output name=git_repo_check::$results"
