Test which step is the problem

--- a/.github/workflows/transfer-rendered-files.yml
+++ b/.github/workflows/transfer-rendered-files.yml
@@ -27,11 +27,14 @@ jobs:
       - name: Run git repo check
         id: git_repo_check
         run: |
+          LEANPUB_REPO=$(echo ${GITHUB_REPOSITORY} | sed "s/_Bookdown/ /g" | awk '{print $1"_Leanpub"}')
+          echo $LEANPUB_REPO
           results=$(Rscript --vanilla scripts/git_repo_check.R ${GITHUB_REPOSITORY})
-          echo "::set-output name=results::$results"
+          echo $results
+          # echo "::set-output name=git_results::$results"
 
       - name: Checkout code from Leanpub repo
-        if: ${{ steps.git_repo_check.outputs.results == 'TRUE' }}
+        if: ${{ steps.git_repo_check.outputs.git_results == 'TRUE' }}
         uses: actions/checkout@v2
         with:
           repository: ${{ steps.get_repo_name.outputs.LEANPUB_REPO }}
