--- a/.github/workflows/transfer-rendered-files.yml
+++ b/.github/workflows/transfer-rendered-files.yml
@@ -28,16 +28,18 @@ jobs:
         id: git_repo_check
         run: |
           sudo apt-get install subversion
-          
+
           # What's the LEANPUB repository's name?
           LEANPUB_REPO=$(echo ${GITHUB_REPOSITORY} | sed "s/_Bookdown/ /g" | awk '{print $1"_Leanpub"}')
           echo $LEANPUB_REPO
 
           # Get repo check script
-          svn export --force https://github.com/${GITHUB_REPOSITORY}.git/branches/${GITHUB_REF#refs/heads/}/scripts/git_repo_check.R
+          svn export --force https://github.com/${GITHUB_REPOSITORY}.git/branches/${GITHUB_REF#refs/heads/}/scripts/git_repo_check.R git_repo_check.R
+
+          git_repo_check.R
 
           # Run repo check script
-          results=$(Rscript --vanilla scripts/git_repo_check.R "$GITHUB_REPOSITORY")
+          results=$(Rscript --vanilla git_repo_check.R "$GITHUB_REPOSITORY")
           echo $LEANPUB_REPO exists: $results
           # echo "::set-output name=git_results::$results"
 
