--- a/.github/workflows/render-bookdown.yml
+++ b/.github/workflows/render-bookdown.yml
@@ -10,6 +10,7 @@ name: Build, Render, and Push
 # Controls when the action will run. Triggers the workflow on push
 # events only for the master branch
 on:
+  workflow_dispatch:
   push:
     branches: [ main ]
     paths:
