--- a/.github/workflows/style-and-sp-check.yml
+++ b/.github/workflows/style-and-sp-check.yml
@@ -10,6 +10,7 @@ name: Style and spell check R markdowns
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the main branch
 on:
+  workflow_dispatch:
   pull_request:
     branches: [ main ]
 
@@ -37,7 +38,7 @@ jobs:
           results=$(Rscript "scripts/spell-check.R")
           echo "::set-output name=sp_chk_results::$results"
           cat spell_check_results.tsv
-          
+
       - name: Archive spelling errors
         uses: actions/upload-artifact@v2
         with:
