--- a/.github/workflows/render-bookdown.yml
+++ b/.github/workflows/render-bookdown.yml
@@ -5,12 +5,11 @@
 
 # Adapted for this jhudsl repository by Candace Savonen Apr 2021
 
-name: Build, Render, and Push
+name: Render Bookdown and Coursera
 
 # Controls when the action will run. Triggers the workflow on push
 # events only for the master branch
 on:
-  workflow_dispatch:
   push:
     branches: [ main ]
     paths:
