--- a/.github/workflows/render-bookdown.yml
+++ b/.github/workflows/render-bookdown.yml
@@ -10,11 +10,9 @@ name: Render Bookdown and Coursera
 # Controls when the action will run. Triggers the workflow on push
 # events only for the master branch
 on:
+  workflow_dispatch:
   push:
     branches: [ main ]
-    paths:
-      - '**.Rmd'
-      - docker/Dockerfile
 
 jobs:
   # This workflow contains a single job called "build-all"
