--- a/.github/workflows/render-preview.yml
+++ b/.github/workflows/render-preview.yml
@@ -45,12 +45,12 @@ jobs:
       # Commit the rendered bookdown files
       - name: Commit rendered bookdown files to development branch
         run: |
-          git checkout -b "preview"
+          git checkout -b "preview-${{ github.event.pull_request.number }}"
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
           git add -A
           git commit -m 'Render bookdown preview' || echo "No changes to commit"
-          git push origin preview || echo "No changes to push"
+          git push --force origin "preview-${{ github.event.pull_request.number }}" || echo "No changes to push"
 
       - name: Find Comment
         uses: peter-evans/find-comment@v1
@@ -63,11 +63,12 @@ jobs:
       - name: Build components of the comment
         id: build-components
         run: |
-          bookdown_link=$(echo "https://htmlpreview.github.io/?https://raw.githubusercontent.com/$GITHUB_REPOSITORY/preview/docs/index.html")
-          coursera_link=$(echo "https://htmlpreview.github.io/?https://raw.githubusercontent.com/$GITHUB_REPOSITORY/preview/docs/coursera/index.html")
+          bookdown_link=$(echo "https://htmlpreview.github.io/?https://raw.githubusercontent.com/$GITHUB_REPOSITORY/preview-${{ github.event.pull_request.number }}/docs/index.html")
+          coursera_link=$(echo "https://htmlpreview.github.io/?https://raw.githubusercontent.com/$GITHUB_REPOSITORY/preview-${{ github.event.pull_request.number }}/docs/coursera/index.html")
           echo ::set-output name=bookdown_link::$bookdown_link
           echo ::set-output name=coursera_link::$coursera_link
-          echo ::set-output name=time::$(date +'%Y-%m-%d %H:%M:%S')
+          echo ::set-output name=time::$(date +'%Y-%m-%d')
+          echo ::set-output name=commit_id::$GITHUB_SHA
 
       - name: Create or update comment
         uses: peter-evans/create-or-update-comment@v1
@@ -79,5 +80,5 @@ jobs:
             - See [preview of Bookdown here](${{ steps.build-components.outputs.bookdown_link }})
             - See [preview of Coursera version here](${{ steps.build-components.outputs.coursera_link }})
 
-            _Updated at ${{ steps.build-components.outputs.time }}_
+            _Updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
           edit-mode: replace
