Get rid of null part of GHA

--- a/.github/workflows/delete-preview.yml
+++ b/.github/workflows/delete-preview.yml
@@ -10,7 +10,5 @@ jobs:
   build-all:
     runs-on: ubuntu-latest
     steps:
-
       - name: Delete preview branch
-        id: build-components
-        run: git branch -D preview-${{ github.event.pull_request.number }} &>/dev/null
+        run: git branch -D preview-${{ github.event.pull_request.number }}
