Try fixing GHA for delete preview again (#254)
* Adding vim

* Try fixing delete preview

* Try again again

--- a/.github/workflows/delete-preview.yml
+++ b/.github/workflows/delete-preview.yml
@@ -10,6 +10,9 @@ jobs:
   build-all:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout branch
+        uses: actions/checkout@v2
+
       - name: Delete preview branch
         uses: actions/checkout@v2
         run: git branch -D preview-${{ github.event.pull_request.number }}
