--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -80,7 +80,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       # Push the Docker image if set to true from a manual trigger
-      - name: Push Docker image
+      - name: Push Docker image if manual trigger set to true
         if: ${{ github.event.inputs.dockerhubpush != 'false' }}
         run: docker push jhudsl/course_template
 
@@ -90,7 +90,7 @@ jobs:
         echo ::set-output name=version::$(echo $GITHUB_REF | cut -d / -f 3)
 
       # Push the Docker image if it is a release
-      - name: Push Docker image
+      - name: Push Docker image if release
         if: ${{ github.head_ref != *"tags"* }}
         run: |
         docker tag ${{ steps.get_version.outputs.version }}
