--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -91,7 +91,7 @@ jobs:
 
       # Push the Docker image if it is a release
       - name: Push Docker image if release
-        if: ${{ github.head_ref != *"tags"* }}
+        if: ${{ github.event_name == 'release' }}
         run: |
           docker tag ${{ steps.get_version.outputs.version }}
           docker push jhudsl/course_template
